# module_diago

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  diagh.h  diago_dav_subspace.cpp  diago_dav_subspace.h  main.cpp  pyproject.toml
.github/workflows/: ci.yml  pip-unittest.yml
benchmarks/: diago_matrix.py
diago/: CMakeLists.txt  bindings.cpp  diagh.h  diagh_consts.cpp  diago_dav_subspace.cpp  diago_dav_subspace.h  test.py
diago/module_base/: CMakeLists.txt  lapack_con.h  parallel_reduce.cpp
diago/module_base/module_device/: CMakeLists.txt  device.cpp  device.h  memory_op.cpp
diago/module_hsolver/: CMakeLists.txt
diago/module_hsolver/kernels/: dngvd_op.cpp  dngvd_op.h  math_kernel_op.cpp  math_kernel_op.h
examples/: diago_matrix.py
module_diago/: __init__.py
module_hsolver/kernels/: math_kernel_op.h
py/: CMakeLists.txt  bindings.cpp  example.cpp  example.h  test.py
py_davsubspace/: __init__.py
py_davsubspace/hsolver/: _hsolver.py
src/: CMakeLists.txt  binding.cpp  py_dav_subspace.hpp
src/diago/: CMakeLists.txt  diago_dav_subspace.cpp  diago_dav_subspace.h
src/diago/module_base/: parallel_reduce.h
src/diago/module_base/module_device/: device.cpp  memory_op.cpp
src/diago/module_hsolver/: CMakeLists.txt
tests/: test_hsolver.py
